syntax = "proto3";

package KycService ;

message GetKycsRequest {
string offset = 1 	 ;
string limit = 2 	 ;
filterOptions filterOption = 3 ;
string type = 4 	 ;
}

message GetComplianceKycsRequest {
string offset = 1;
string limit = 2;
string completedByUserId = 3;
string type = 4;
complianceFilter filter = 5 ;
}

message complianceFilter {
  string accountType = 1   ;
  string searchBy= 2 	 ;
  string startDate = 3   ;
  string endDate = 4 	 ; 
  string kycStatus = 5;
  string nationality = 6 ;
}

message filterOptions {
string nationality = 1  ;
string accountType = 2  ;
string startDate = 3	 ;
string endDate = 4 	 ;
string search = 5;
}

message GetUserKycDocsRequest {
string userId = 1 	 ;
}

message GetUserKycDocsResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
kycResponseObject data = 4 	 ;
repeated ErrorObject errorData = 5 ;
}

message kycResponseObject {
businessProfile businessProfile = 1 	 ;
individualProfile individualProfile = 2 ;
repeated string moderationComments = 3  ;
}

message ErrorObject {
string field = 1 	 ;
string message = 2	 ;
}

message GetKycsResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
KycList data = 4 	 ;
}

message KycList {
repeated UserKyc list = 1 ;
string totalCount = 2 	 ;
}

message UserKyc {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 	 ;
string sumsubKycStatus = 4 	 ;
string sumsubReason = 5 	 ;
string sumsubPayload = 6 	 ;
string adminKycStatus = 7 	 ;
string s3KycStatus = 8 	 ;
string accountType = 9 	 ;
string createdAt = 10 	 ;
string updatedAt = 11 	 ;
string nationality = 12 	 ;
string firstName = 13 	 ;
string lastName = 14 	 ;
string email = 15 	 ;
string phoneNumber = 16 	 ;
string questionairePayload = 17 ;
string isVerifiedAt = 18 	 ;
string businessName = 19 	 ;
string brandName = 20 	 ;
string incorporationDate = 21   ;
string companyType = 22 	 ;
string taxVatId = 23 	 ;
string completedBy = 24 ;
string completedByUserId = 25 ;
string adminFullName = 26;
}

message businessProfile {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 	 ;
string sumsubKycStatus = 4 	 ;
string sumsubReason = 5 	 ;
string sumsubPayload = 6 	 ;
string adminKycStatus = 7 	 ;
string s3KycStatus = 8 	 ;
string accountType = 9 	 ;
string createdAt = 10 	 ;
string updatedAt = 11 	 ;
string nationality = 12 	 ;
string email = 15 	 ;
string phoneNumber = 16 	 ;
string questionairePayload = 17 	 ;
string isVerifiedAt = 18 	 ;
string businessName = 19 	 ;
string brandName = 20 	 ;
string incorporationDate = 21 	 ;
string companyType = 22 	 ;
string taxVatId = 23 	 ;
repeated UserKycDoc businessDocs = 25 ;
repeated UBOsList ubos = 26 	 ;
string registrationNumber = 27 	 ;
string individualAccountInf = 28 	 ;
}

message individualProfile {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 	 ;
string sumsubKycStatus = 4 	 ;
string sumsubReason = 5 	 ;
string sumsubPayload = 6 	 ;
string adminKycStatus = 7 	 ;
string s3KycStatus = 8 	 ;
string accountType = 9 	 ;
string createdAt = 10 	 ;
string updatedAt = 11 	 ;
string nationality = 12 	 ;
string firstName = 13 	 ;
string lastName = 14 	 ;
string email = 15 	 ;
string phoneNumber = 16 	 ;
string questionairePayload = 17 	 ;
string isVerifiedAt = 18 	 ;
repeated UserKycDoc individualDocs = 19 ;
string dob = 20 	 ;
string address = 21 	 ;
string zipCode = 22 	 ;
string verificationFullPayload = 23 	 ;
string nationalId = 24 	 ;
string city = 25 	 ;
string individualAccountInf = 26 	 ;
}

message UBOsList {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 	 ;
string sumsubKycStatus = 4 	 ;
string sumsubReason = 5 	 ;
string sumsubPayload = 6 	 ;
string adminKycStatus = 7 	 ;
string s3KycStatus = 8 	 ;
string accountType = 9 	 ;
string createdAt = 10 	 ;
string updatedAt = 11 	 ;
string nationality = 12 	 ;
string firstName = 13 	 ;
string lastName = 14 	 ;
string email = 15 	 ;
string phoneNumber = 16 	 ;
string questionairePayload = 17 	 ;
string isVerifiedAt = 18 	 ;
repeated UserKycDoc individualDocs = 19 ;
string dob = 20 	 ;
string address = 21 	 ;
string zipCode = 22 	 ;
string verificationFullPayload = 23 	 ;
string nationalId = 24 	 ;
string city = 25 	 ;
string individualAccountInf = 26 	 ;
repeated string moderationComment = 27  ;
}

message UserKycDoc {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 ;
string kycId = 4 	 ;
string sumsubDocId = 5 ;
string docName = 6 	 ;
string docType = 7 	 ;
string docPath = 8 	 ;
string viewType = 9	 ;
string s3Status = 10   ;
string createdAt = 11  ;
string updatedAt = 12  ;
}

message UpdateUserKycStatusRequest {
string userId = 1 	 ;
string adminKycStatus = 2 	 ;
string rejectionReason = 3 	 ;
string completedBy = 4 	 ;
string completedByUserId = 5 	 ;
string adminFullName = 6;
}

message UpdateUserKycStatusResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
string data = 4 	 ;
repeated ErrorObject errorData = 5	 ;
}

message GetKytsRequest {
string offset = 1 	 ;
string limit = 2 	 ;
filter filter = 3 	 ;
}

message filter {
string txnStatus = 1   ;
string searchBy= 2 	 ;
string startDate = 3   ;
string endDate = 4 	 ;   
string type = 5;
}

message GetKytsResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
KytList data = 4 	 ;
repeated ErrorObject errorData = 5 ;
}

message KytList {
repeated UserKyt list = 1 ;
string totalCount = 2 	 ;
}

message UserKyt {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3 	 ;
string score = 4 	 ;
string txnStatus = 5 	 ;
string createdAt = 6 	 ;
string updatedAt = 7 	 ;
string txnType = 9 	 ;
string txnId = 10 	 ;
string coinName = 11 	 ;
string clientId = 12 	 ;
string typeId = 13 	 ;
string amount = 14 	 ;
string withdrawId = 15 	 ;
bool wasSuspicious = 16 	 ;
string toAddress = 17 	 ;
string fromAddress = 18 	 ;
string sumsubResponse = 19 ;
string trxPayload = 20           ;
string type = 21 ; 
string coinSymbol = 22;
string coinNetwork = 23;
string kytStatus = 24;
}

message GetKytsByUser {
string offset = 1 	 ;
string limit = 2 	 ;
filter filter = 3 	 ;
string userId = 4 	 ;
}

message UploadKycDocRequest {
  string userId = 1;
  bytes docFile = 2;
  string fileType = 3;
  string docName = 4;
  string txnId = 5;
}

message UploadKycDocResponse {
string status = 1 	 ;
string message = 2 	 ;
bool error = 3 	 ;
ImageData data = 4 	 ;
repeated ErrorObject errorData = 5 ;
}

message ImageData{
    string imageId = 1 ; 
    string isTransactionDoc = 2 ; 
}

message EmptyObj {}

message UpdateKycByComplianceRequest{
string userId = 1 	 ;
string sumsubKycStatus = 2 	 ;
string completedBy = 3 	 ;
string completedByUserId = 4 	 ;
}

message UpdateKycByComplianceResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
string data = 4 	 ;
repeated ErrorObject errorData = 5 	 ;
}

message GetUserVerificationAlertResponse{
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
repeated string data = 4 	 ;
repeated ErrorObject errorData = 5 	 ;
}

message GetUserVerificationAlertRequest{
string applicantId = 1 	 ;
}

message GetTxnDetailRequest {
string txnId = 1 	 ;
string typeId = 2 ; 
}

message GetTxnDetailReponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
string data = 4 	 ;
repeated ErrorObject errorData = 5 ;
}

message getVerificationScreeningRequest {
string userType = 1 	 ;
string limit = 2 	 ;
string offset = 3 	 ;
}

message getVerificationScreeningResponse {
string status= 1 	 ;
string message=2 	 ;
bool error=3 	 ;
verificationPayload data = 4 	 ;
repeated ErrorObject errorData = 5 	 ;
}

message verificationPayload {
clientVerified clientVerified = 1 	 ;
rejectedRequest rejectedRequest = 2 	 ;
doucmentsVerified doucmentsVerified = 3 	 ;
alertRaised alertRaised = 4 	 ;
verificationChartData verificationChartData = 5 ;
allAlertsPayload allAlerts = 6 	 ;
}

message allAlertsPayload{
repeated alertRecord rows = 1 ;
string count = 2 	 ;
}

message alertRecord {
string id = 1 	 ;
string userId = 2 	 ;
string applicantId = 3	 ;
repeated string alert = 4 ;
string createdAt = 5 	 ;
string updatedAt = 6 	 ;
}

message clientVerified {
string totalCount = 1 	 ;
string lastSevenDayCount = 2  ;
string lastThirtyDayCount = 3 ;
}

message doucmentsVerified {
string totalCount = 1 	 ;
string lastSevenDayCount = 2  ;
string lastThirtyDayCount = 3 ;
}

message rejectedRequest {
string totalCount = 1 	 ;
string lastSevenDayCount = 2  ;
string lastThirtyDayCount = 3 ;
}

message alertRaised {
string totalCount = 1 	 ;
string lastSevenDayCount = 2  ;
string lastThirtyDayCount = 3 ;
}

message verificationChartData {
string alertGenerated = 1 	 ;
string approved = 2 	 ;
string approvedManually = 3 	 ;
}

// ===== questionnaire =====

message GetQuestinnaireRequest {
string userId = 1 ;
}

message GetQuestinnaireResponse {
repeated Questionnaire data = 1 ;
}

message Questionnaire {
string id = 1 ;
string questionId = 2 ;
string answerId = 3 ;
string userId = 4 ;
string manualScore = 5 ;
string createdAt = 6 ;
string updatedAt = 7 ;
repeated QuestionnaireComments comments = 8 ;
Answer answer = 9 ;
Question question = 10 ;
}

message QuestionnaireComments {
string id = 1 ;
string text = 2 ;
string questionnaireId = 3 ;
string adminId = 4 ;
string createdAt = 5 ;
string updatedAt = 6 ;
string manualScore = 7 ;
}

message Answer {
string id = 1 ;
string key = 2 ;
string title = 3 ;
string score = 4 ;
string type = 5 ; // business, individual
string questionId = 6 ;
}

message Question {
string id = 1 ;
string title = 2 ;
string key = 3 ;
string type = 4 ; // business, individual
}

message UpdateManualScoreRequest {
string questionnaireId = 1 ;
string manualScore = 2 ;
string text = 3 ;
string adminId = 4 ;
}

message UpdateManualScoreResponse {
Questionnaire data = 1 ;
}

message GetKytDocRequest {
    string limit = 1 ;
    string offset = 2 ;
    string userId = 3 ;
    string txnId = 4 ;
    string docType = 5 ;
}

message GetKytDocResponse {
    string status= 1 	 ;
    string message=2 	 ;
    bool error=3 	 ;
    string data = 4 	 ;
    repeated ErrorObject errorData = 5 ;
}


message updateAdditionalDocRequest {
    string userId = 1;
    string txnId = 2; 
    string id = 3;
    string newTitle = 4;
}

message updateAdditionalDocResponse {
     string status= 1 	 ;
    string message=2 	 ;
    bool error=3 	 ;
    string data = 4 	 ;
    repeated ErrorObject errorData = 5 ;
}

message removeAdditionalDocumentRequest {
    string userId = 1;
    string txnId = 2;
    string docId = 3;
    string imagePath = 4; 
}

message removeAdditionalDocumentResponse {
    string status= 1 	 ;
    string message=2 	 ;
    bool error=3 	 ;
    ErrorObject data = 4 	 ;
    repeated ErrorObject errorData = 5 ;
}

service KycService {
rpc getKycs(GetKycsRequest) returns (GetKycsResponse) 	 ;
rpc getUserKycDocs(GetUserKycDocsRequest) returns (GetUserKycDocsResponse) 	 ;
rpc updateUserKycStatus(UpdateUserKycStatusRequest) returns (UpdateUserKycStatusResponse) 	 ;
rpc getAllKyts(GetKytsRequest) returns (GetKytsResponse) 	 ;
rpc getAllKytsByUser(GetKytsByUser) returns (GetKytsResponse) 	 ;
rpc uploadKycDoc(UploadKycDocRequest) returns (UploadKycDocResponse) 	 ;
rpc getComplianceKycs(GetComplianceKycsRequest) returns (GetKycsResponse) 	 ;
rpc updateKycByCompliance(UpdateKycByComplianceRequest) returns (UpdateKycByComplianceResponse) 	 ;
rpc getSumsubAlertForUser(GetUserVerificationAlertRequest) returns (GetUserVerificationAlertResponse)	 ;
rpc getTxnDetailByTxnId(GetTxnDetailRequest) returns (GetTxnDetailReponse) 	 ;
rpc getVerificationScreening(getVerificationScreeningRequest) returns (getVerificationScreeningResponse) ;
rpc getQuestionnaire(GetQuestinnaireRequest) returns (GetQuestinnaireResponse) ;
rpc updateManualScore(UpdateManualScoreRequest) returns (UpdateManualScoreResponse) ;
rpc getKytDocList(GetKytDocRequest) returns (GetKytDocResponse) ; 
rpc updateAdditionalDoc (updateAdditionalDocRequest) returns (updateAdditionalDocResponse) ;
rpc removeAdditionalDocument (removeAdditionalDocumentRequest) returns (removeAdditionalDocumentResponse);
}
